--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                     text-align: justify;
                 }
             </style>
-            <div class="section" id="tokenomics">
+            <div class="section" id="tokenomics" style="margin-top: 40px">
                 <h2 class="section-heading">Tokenomics</h2>
                 <div class="chart-container">
                     <canvas id="myChart"></canvas>
