--- a/index.html
+++ b/index.html
@@ -286,6 +286,10 @@
                 height: auto;
             }
 
+            .content {
+                margin-top: 140px;
+            }
+
             #logo {
                 height: 40px;
                 width: 40px;
