--- a/index.html
+++ b/index.html
@@ -826,11 +826,11 @@
                     <i class="fab fa-twitter fa-2x"></i>
                     <span style="font-size: 18px; font-weight: bold;">Twitter</span>
                 </a>
-                <a href="https://t.me/tributeoffical" target="_blank" style="text-decoration: none; color: #ffffff;">
+                <a href="https://t.me/thetributetbc" target="_blank" style="text-decoration: none; color: #ffffff;">
                     <i class="fab fa-telegram fa-2x"></i>
                     <span style="font-size: 18px; font-weight: bold;">Telegram</span>
                 </a>
-                <a href="https://etherscan.io/address/your_contract_address" target="_blank"
+                <a href="https://opbnbscan.com/token/0xf5380bf33f09826c79e23f744845a0e23c1a3f73" target="_blank"
                     style="text-decoration: none; color: #ffffff;">
                     <i class="fa-brands fa-ethereum fa-2x"></i>
                     <span style="font-size: 18px; font-weight: bold;">Contract</span>
