--- a/index.html
+++ b/index.html
@@ -478,8 +478,8 @@
 
                 <script>
                     function buyToken() {
-                        var tokenAddress = "0x1234567890ABCDEF";
-                        var uniswapURL = "https://app.uniswap.org/#/swap?inputCurrency=" + tokenAddress;
+                        var tokenAddress = "0xf5380bf33f09826c79e23f744845a0e23c1a3f73";
+                        var uniswapURL = "https://www.binaryswap.io/#/swap?outputCurrency=" + tokenAddress;
                         window.open(uniswapURL, "_blank");
                     }
                 </script>
