--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 
                 <script>
                     function buyToken() {
-                        var tokenAddress = "0xf5380bf33f09826c79e23f744845a0e23c1a3f73";
+                        var tokenAddress = "tobeannounced";
                         var uniswapURL = "https://www.binaryswap.io/#/swap?outputCurrency=" + tokenAddress;
                         window.open(uniswapURL, "_blank");
                     }
@@ -830,7 +830,7 @@
                     <i class="fab fa-telegram fa-2x"></i>
                     <span style="font-size: 18px; font-weight: bold;">Telegram</span>
                 </a>
-                <a href="https://opbnbscan.com/token/0xf5380bf33f09826c79e23f744845a0e23c1a3f73" target="_blank"
+                <a href="tobeannounced" target="_blank"
                     style="text-decoration: none; color: #ffffff;">
                     <i class="fa-brands fa-ethereum fa-2x"></i>
                     <span style="font-size: 18px; font-weight: bold;">Contract</span>
